# fembvpp

./: CMakeLists.txt  README.md
cmake/: FEMBVPPConfig.cmake.in  FEMBVPPGenerateConfig.cmake  FindClp.cmake  FindCoinUtils.cmake  FindIpopt.cmake  FindNLopt.cmake
examples/: CMakeLists.txt
examples/kmeans/: CMakeLists.txt  multivariate_normal.cpp  multivariate_normal.hpp  run_fembv_kmeans.cpp
examples/toy-binary-vars/: CMakeLists.txt  run_fembv_bin.cpp
include/fembvpp/: clpsimplex_affiliations_solver.hpp  fembv_bin.hpp  fembv_bin_local_model.hpp  fembv_bin_local_model_ipopt_solver.hpp  fembv_kmeans.hpp  linear_constraint.hpp  random_matrix.hpp
src/: clpsimplex_affiliations_solver.cpp  fembv_bin.cpp  fembv_bin_local_model.cpp  fembv_bin_local_model_ipopt_solver.cpp  fembv_kmeans.cpp  linear_constraint.cpp
test/: CMakeLists.txt  test_clpsimplex_affiliations_solver.cpp  test_random_matrix.cpp
